// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 1`] = `
"+---+---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 2`] = `
"+---+---+---+
|   |   |   |
+   +---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 3`] = `
"+---+---+---+
|   |       |
+   +---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 4`] = `
"+---+---+---+
|   |       |
+   +---+   +
|   |   |   |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 5`] = `
"+---+---+---+
|   |       |
+   +---+   +
|       |   |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 6`] = `
"+---+---+---+
|   |       |
+   +---+   +
|           |
+---+---+---+
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 7`] = `
"+---+---+---+
|   |       |
+   +---+   +
|           |
+---+---+   +
|   |   |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 8`] = `
"+---+---+---+
|   |       |
+   +---+   +
|           |
+---+---+   +
|       |   |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 9`] = `
"+---+---+---+
|   |       |
+   +---+   +
|           |
+---+---+   +
|           |
+---+---+---+
"
`;

exports[`paintMazeCreation() with stringPainter ASCI paints every step of maze creation 10`] = `
"+---+---+---+
|   |       |
+   +---+   +
|           |
+---+---+   +
|           |
+---+---+---+
"
`;
